# Vertical-Farming

./: README.md
projects/: README.md
projects/central_nbiot/: CMakeLists.txt  README.md  nrf9160dk_nrf9160.overlay  nrf9160dk_nrf9160_ns.overlay  prj.conf
projects/central_nbiot/coap_client/: coap_client.c  coap_client.h  coap_fsm.c  coap_message_parsing.c  coap_message_parsing.h
projects/central_nbiot/gpioif/: gpio_interface.c  gpio_interface.h
projects/central_nbiot/internal_uart/: internal_uart.c  internal_uart.h  message_parsing.c  message_parsing.h
projects/central_nbiot/inventory/: inventory.c  inventory.h
projects/central_nbiot/src/: main.c
projects/central_node/: CMakeLists.txt  README.md  main.c  nrf9160dk_nrf52840.overlay  prj.conf
projects/central_node/ble_client/: ble_fsm.c  (+7 more)
projects/central_wifi/: CMakeLists.txt  nrf7002dk_nrf5340_cpuapp.overlay  pm_static_nrf7002dk_nrf5340_cpuapp.yml  prj.conf
projects/central_wifi/src/: main.c
projects/central_wifi/src/ble_client/: ble_characteristic_control.c  ble_conn_control.c  ble_connection_data.c  ble_connection_data.h  ble_fsm.c
projects/central_wifi/src/cloud_data_inventory/: inventory.h
projects/central_wifi/src/coap_client/: coap_client.c  coap_fsm.c  coap_fsm.h  coap_message_parsing.c
projects/central_wifi/src/environment_control/: environment_control_config.c  environment_control_fsm.c
projects/central_wifi/src/flash_system/: flash_system.c
projects/central_wifi/src/measurements/: measurements_data_storage.c  measurements_data_storage.h  measurements_fsm.c  measurements_fsm_timer.c  measurements_fsm_timer.h
projects/central_wifi/src/timestamp_module/: timestamp.c
projects/central_wifi/src/watchdog_timer/: watchdog_timer.c
projects/central_wifi/src/wifi_config/: wifi_apis.c  wifi_apis.h  wifi_config.c  wifi_config.h
projects/coap_server/: database_tools.py  index.html  server.py  web_server.py
projects/common/: common.h
projects/sensor_node/: CMakeLists.txt  README.rst  mcuboot.conf  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  prj.conf  prj_dongle.conf
projects/sensor_node/adc_calibration/: adc_calibration.c  adc_calibration.h
projects/sensor_node/battery_measurement/: battery_measurement.c  battery_measurement.h
projects/sensor_node/ble_server/: ble_configure_service.c  ble_configure_service.h  ble_conn_control.c  ble_conn_control.h  ble_measurement_service.c  ble_measurement_service.h
projects/sensor_node/bme_280/: temperature_humidity_sensor.c  temperature_humidity_sensor.h
projects/sensor_node/flash_system/: flash_system.c  flash_system.h
projects/sensor_node/gpio/: gpioif.c  gpioif.h
projects/sensor_node/light_sensor/: light_sensor.c  light_sensor.h
projects/sensor_node/main/: main.c
projects/sensor_node/soil_moisture/: soil_moisture.c  soil_moisture.h
projects/sensor_node/temp_hum/: temperature_humidity_sensor.c  temperature_humidity_sensor.h
projects/sensor_node/timer_module/: timer_module.c  timer_module.h
projects/sensor_node/watchdog_timer/: watchdog_timer.c  watchdog_timer.h
(+20 files in other folders)
